deploy/k8s/airflow-custom/06-triggerer.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-triggerer
  namespace: airflow
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    component: triggerer
spec:
  serviceName: airflow-triggerer
  replicas: 1
  selector:
    matchLabels:
      component: triggerer
  template:
    metadata:
      labels:
        component: triggerer
    spec:
      serviceAccountName: airflow
      restartPolicy: Always
      nodeSelector:
        poorbricks.io/dags: "true"
      containers:
      - name: triggerer
        image: apache/airflow:3.2.0
        imagePullPolicy: IfNotPresent
        command: ["airflow", "triggerer"]
        ports:
        - containerPort: 8794
          name: triggerer
        volumeMounts:
        - name: logs
          mountPath: /tmp/airflow-logs
        resources:
          requests:
            cpu: 300m
            memory: 768Mi
          limits:
            cpu: 300m
            memory: 768Mi
      volumes:
      - name: logs
        emptyDir:
          sizeLimit: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-triggerer
  namespace: airflow
spec:
  clusterIP: None
  selector:
    component: triggerer
  ports:
  - port: 8794
    targetPort: 8794
